# amla_at1_24996427

./: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/amla_at1_24996427/data/: sets.py
src/amla_at1_24996427/model/: BaselineClassifier.py  PerformanceMetrics.py
tests/: test_amla_at1_24996427.py
