[tool.poetry]
name = "amla_at1_24996427"
version = "0.1.0"
description = "Common Function Package"
authors = ["Ratticha"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
